--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,2 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/demo_dso
-    username: demo_dso
-    password: demo_dso
-  liquibase:
-    change-log: classpath:db/master.xml
+server:
+  port: 8080
