--- a/.gitlab-ci-dso.yml
+++ b/.gitlab-ci-dso.yml
@@ -25,15 +25,15 @@ stages:
   - test-app
 
 test-vault:
-  only:
-    - web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
   stage: read-secret
   extends:
     - .vault:read_secret
 
 test-nexus:
-  only:
-    - web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
   variables:
     BUILD_IMAGE_NAME: maven:3.9.6-eclipse-temurin-21
     WORKING_DIR: "."
@@ -50,8 +50,8 @@ test-nexus:
     expire_in: 1 hrs
 
 test-sonar:
-  only:
-    - web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
   variables:
     BUILD_IMAGE_NAME: maven:3.9.6-eclipse-temurin-21
     WORKING_DIR: .
@@ -61,8 +61,8 @@ test-sonar:
   allow_failure: true
 
 test-harbor:
-  only:
-    - web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
   variables:
     WORKING_DIR: "."
     IMAGE_NAME: java-demo
